@@ -333,7 +333,7 @@ if test "x$mlview" = "xyes"; then
 	LIBXML2_VERSION=2.4.30
 	GTK2_VERSION=2.0.6
 	LIBGLADE2_VERSION=0.17
-	GCONF_VERSION=2.4.0
+	GCONF_VERSION=2.2.0
 	PKG_CHECK_MODULES(MLVIEW, libgnomeui-2.0 >= $LIBGNOMEUI2_VERSION
 		libxml-2.0 >= $LIBXML2_VERSION
 		gtk+-2.0 >= $GTK2_VERSION
